WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279921
Handle non-provisional load failure with site isolation in PLT
https://bugs.webkit.org/show_bug.cgi?id=279921
Summary
Handle non-provisional load failure with site isolation in PLT
Alex Christensen
Reported
2024-09-18 14:55:19 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-18 14:55:29 PDT
<
rdar://problem/136251106
>
Alex Christensen
Comment 2
2024-09-18 14:59:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33856
EWS
Comment 3
2024-09-18 19:29:14 PDT
Committed
283886@main
(4b59b2e31035): <
https://commits.webkit.org/283886@main
> Reviewed commits have been landed. Closing PR #33856 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug