Source/WebKit/UIProcess/FrameLoadState.cpp
@@ -93,9 +93,9 @@ void FrameLoadState::didFailProvisionalLoad()
     m_provisionalURL = { };
     m_unreachableURL = m_lastUnreachableURL;
 
-    m_observers.forEach([](FrameLoadStateObserver& observer) {
+    m_observers.forEach([&](FrameLoadStateObserver& observer) {
         observer.didCancelProvisionalLoad();
-        observer.didFailProvisionalLoad();
+        observer.didFailProvisionalLoad(m_unreachableURL);
     });
 }
 
@@ -122,7 +122,7 @@ void FrameLoadState::didFinishLoad()
     m_state = State::Finished;
 
     m_observers.forEach([&](FrameLoadStateObserver& observer) {
-        observer.didFinishLoad(m_url);
+        observer.didFinishLoad(m_isMainFrame, m_url);
     });
 }
 
@@ -132,6 +132,9 @@ void FrameLoadState::didFailLoad()
     ASSERT(m_provisionalURL.isEmpty());
 
     m_state = State::Finished;
+    m_observers.forEach([&](FrameLoadStateObserver& observer) {
+        observer.didFailLoad(m_url);
+    });
 }
 
 void FrameLoadState::didSameDocumentNotification(const URL& url)
